<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="menu_items">
        <item>Nieuws</item>
        <item>Agenda</item>
        <item>Teams</item>
        <item>Teletekst</item>
        <!-- <item>Contact</item> -->
    </string-array>

    <string name="none"></string>
    <string name="loading">Laden…</string>
    <string name="app_name">Juliana \'32</string>
    <string name="menu_settings">Instellingen</string>
    <string name="menu_nieuws">Nieuws</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_teletekst">Teletekst</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_about">Over deze app</string>
    <string name="content_description_menubutton">Open het menu</string>
    <string name="multiple_notifications">Er zijn %d nieuwe nieuwsberichten</string>
    <string name="about">Deze app is ontwikkeld voor s.v. Juliana \'32.\n\nVoor vragen, opmerkingen, of bij ontbrekende of foutieve data kunt u een email sturen naar onderstaand email adres.</string>
    <string name="about2">Ontwikkeld door Mark Buikema</string>
    <string name="about_email">buikemamark@gmail.com</string>
    <string name="about_email_subject">s.v. Juliana 32 app</string>
    <string name="menu">Menu</string>
    <string name="refresh">Refresh</string>
    <string name="game_team_divider">" - "</string>
    <string name="date_divider">:   </string>
    <string name="uitslagen">Uitslagen</string>
    <string name="programma">Programma</string>
    <string name="played">G</string>
    <string name="team">Team</string>
    <string name="number">#</string>
    <string name="won">W</string>
    <string name="drawn">GL</string>
    <string name="lost">V</string>
    <string name="points">P</string>
    <string name="scored">DPV</string>
    <string name="conceded">DPT</string>
    <string name="minusPoints">PM</string>
    <string name="swipehint">Veeg over scherm om van pagina te wisselen</string>
    <string name="share">Deel dit nieuwsbericht</string>
    <string name="sharePhoto">Deel deze foto</string>
    <string name="failuretext">Er is iets fout gegaan bij het laden van de data&#8230;</string>
    <string name="failure_try_again">Opnieuw proberen</string>
    <string name="no_internet">U bent niet verbonden met het internet. De data kan niet geladen worden.</string>
    <string name="server_offline">De server is offline. De data kan niet geladen worden.</string>
    <string name="failure">Fout</string>
    <string name="no_tables_found">Er is voor dit team geen stand gevonden.</string>
    <string name="no_photos_found">Er zijn voor dit team geen foto\'s gevonden.</string>
    <string name="fotos">Foto\'s</string>
    <string name="second_back_press">Druk nogmaals op terug om te sluiten</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="search">Zoeken…</string>
    <string name="comments">Reacties</string>
    <string name="no_connection">Kan geen gegevens ophalen. Controleer internetverbinding en probeer het opnieuw!</string>
    <string name="app_id">281741915275542</string>
    <string name="timestamp_today">Vandaag</string>
    <string name="timestamp_yesterday">Gisteren</string>
    <string name="timestamp_just_now">Zojuist</string>
    <string name="timestamp_minutes_ago">%s minuten geleden</string>
    <string name="timestamp_hours_ago">%s uur geleden</string>
    <string name="comment">Reageer</string>
    <string name="commenthint">Schrijf een reactie</string>
    <string name="facebooklogin">Log in met Facebook om te reageren</string>
    <string name="like">Like</string>
    <string name="help">Over deze app</string>
    <string name="prefs">Instellingen</string>
    <string name="no_item">Er zijn geen nieuwsberichten gevonden. Selecteer in de instellingen ten minste één nieuwsbron of controleer je internetverbinding.</string>
    <string name="call">Bellen</string>
    <string name="email">Stuur een email</string>
    <string name="settings">Instellingen</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_website">Website</string>
    <string name="content_not_found">Nieuwsbericht niet gevonden. Bekijk het bericht op de website.</string>
    <string name="comment_post_success">Uw reactie is geplaatst!</string>
    <string name="comment_post_failure">Uw reactie kan niet geplaatst worden. Controleer uw internetverbinding.</string>

</resources>