<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <org.holoeverywhere.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <org.holoeverywhere.widget.TextView
            android:id="@+id/aboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <com.markbuikema.juliana32.ui.Button
            android:id="@+id/aboutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/about_email" />

        <org.holoeverywhere.widget.TextView
            android:id="@+id/aboutText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/about2"
            android:textColor="@android:color/black" />
    </org.holoeverywhere.widget.LinearLayout>

</ScrollView>