<?xml version="1.0" encoding="utf-8"?>
<org.holoeverywhere.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <org.holoeverywhere.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_frame"
        android:orientation="vertical" >

        <org.holoeverywhere.widget.LinearLayout
            android:id="@+id/commentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="@dimen/card_padding" >

            <ImageView
                android:id="@+id/nieuwsitem_comment_profilepic"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/none"
                android:src="@drawable/fb_comment" />

            <org.holoeverywhere.widget.TextView
                android:id="@+id/nieuwsitem_comments_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_padding"
                android:text="@string/comment"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </org.holoeverywhere.widget.LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_line_thickness"
            android:background="@color/grey" />

        <org.holoeverywhere.widget.LinearLayout
            android:id="@+id/nieuwsitem_comments_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <org.holoeverywhere.widget.Button
            android:id="@+id/facebookLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebooklogin" />

        <org.holoeverywhere.widget.LinearLayout
            android:id="@+id/commentInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_padding" >

            <org.holoeverywhere.widget.FrameLayout
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center_vertical" >

                <ImageView
                    android:id="@+id/commentInputPicture"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:contentDescription="@string/none"
                    android:scaleType="centerCrop"
                    android:src="@drawable/silhouette" />

                <org.holoeverywhere.widget.ProgressBar
                    android:id="@+id/commentInputLoader"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:indeterminate="true" />

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:contentDescription="@string/none"
                    android:scaleType="fitXY"
                    android:src="@drawable/rounded_corners" />
            </org.holoeverywhere.widget.FrameLayout>

            <org.holoeverywhere.widget.LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <org.holoeverywhere.widget.LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <org.holoeverywhere.widget.TextView
                        android:id="@+id/commentInputName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="@dimen/small_margin"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </org.holoeverywhere.widget.LinearLayout>

                <org.holoeverywhere.widget.EditText
                    android:id="@+id/commentInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:hint="@string/commenthint"
                    android:imeOptions="actionSend|flagNoExtractUi|flagForceAscii"
                    android:inputType="textCapSentences"
                    android:paddingLeft="@dimen/small_margin"
                    android:textColor="@android:color/black" >
                </org.holoeverywhere.widget.EditText>
            </org.holoeverywhere.widget.LinearLayout>
        </org.holoeverywhere.widget.LinearLayout>
    </org.holoeverywhere.widget.LinearLayout>

</org.holoeverywhere.widget.FrameLayout>