<?xml version="1.0" encoding="utf-8"?>
<org.holoeverywhere.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.markbuikema.juliana32"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <org.holoeverywhere.widget.FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <org.holoeverywhere.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <com.viewpagerindicator.TitlePageIndicator
                android:id="@+id/tablePagerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                app:footerColor="@color/blue"
                app:footerIndicatorStyle="underline"
                app:footerLineHeight="2dp"
                app:selectedBold="true"
                app:selectedColor="@color/blue" />

            <ViewPager
                android:id="@+id/tablePager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </ViewPager>
        </org.holoeverywhere.widget.LinearLayout>

        <org.holoeverywhere.widget.TextView
            android:id="@+id/noTablesFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_tables_found"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <org.holoeverywhere.widget.FrameLayout
            android:id="@+id/uitslagenContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/uitslagen"
            android:gravity="bottom" >

            <org.holoeverywhere.widget.ListView
                android:id="@+id/uitslagenList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:cacheColorHint="@color/white"
                android:gravity="bottom"
                android:listSelector="@drawable/listselector"
                android:scrollbarThumbVertical="@drawable/listitem_background"
                android:stackFromBottom="true"
                android:transcriptMode="alwaysScroll" >
            </org.holoeverywhere.widget.ListView>
        </org.holoeverywhere.widget.FrameLayout>
    </org.holoeverywhere.widget.FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <org.holoeverywhere.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <org.holoeverywhere.widget.Button
            android:id="@+id/uitslagenButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/listselector"
            android:text="@string/uitslagen" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey" >
        </View>

        <org.holoeverywhere.widget.Button
            android:id="@+id/programmaButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/listselector"
            android:text="@string/programma" />
    </org.holoeverywhere.widget.LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <org.holoeverywhere.widget.FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <org.holoeverywhere.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ViewPager
                android:id="@+id/photoPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
            </ViewPager>

            <com.viewpagerindicator.UnderlinePageIndicator
                android:id="@+id/photoIndicator"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/grey"
                app:fades="false"
                app:selectedColor="@color/blue" />
        </org.holoeverywhere.widget.LinearLayout>

        <org.holoeverywhere.widget.TextView
            android:id="@+id/noPhotosFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_photos_found"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <org.holoeverywhere.widget.FrameLayout
            android:id="@+id/programmaContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/programma" >

            <org.holoeverywhere.widget.ListView
                android:id="@+id/programmaList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:cacheColorHint="@color/white"
                android:gravity="top"
                android:listSelector="@android:color/transparent"
                android:scrollbarThumbVertical="@drawable/listitem_background"
                android:transcriptMode="alwaysScroll" >
            </org.holoeverywhere.widget.ListView>
        </org.holoeverywhere.widget.FrameLayout>
    </org.holoeverywhere.widget.FrameLayout>
</org.holoeverywhere.widget.LinearLayout>