<org.holoeverywhere.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ltgrey"
    tools:context=".MainActivity" >

    <include
        android:id="@+id/teamDetailView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        layout="@layout/teamdetail"
        android:visibility="gone" />

    <include
        android:id="@+id/nieuwsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/grid_nieuws"
        android:visibility="gone" />

    <include
        android:id="@+id/teamsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/teams"
        android:visibility="gone" />

    <include
        android:id="@+id/teletekstView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/teletekst"
        android:visibility="gone" />

    <include
        android:id="@+id/contactView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/contact"
        android:visibility="gone" />

    <include
        android:id="@+id/agendaView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/agenda"
        android:visibility="gone" />

    <org.holoeverywhere.widget.FrameLayout
        android:id="@+id/nieuwsDetailContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/animationCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:contentDescription="@string/none"
            android:scaleType="fitXY"
            android:src="@drawable/card_frame"
            android:visibility="gone" />
    </org.holoeverywhere.widget.FrameLayout>

    <org.holoeverywhere.widget.LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@drawable/actionbar"
        android:orientation="horizontal" >

        <org.holoeverywhere.widget.LinearLayout
            android:id="@+id/menuToggler"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/action_bar_height"
            android:background="@drawable/listselector"
            android:orientation="horizontal" >

            <org.holoeverywhere.widget.FrameLayout
                android:layout_width="64dp"
                android:layout_height="@dimen/action_bar_height" >

                <ImageView
                    android:id="@+id/menuDrawerIcon"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/none"
                    android:scaleType="fitStart"
                    android:src="@drawable/apptheme_ic_navigation_drawer" />

                <ImageView
                    android:id="@+id/menuUpIcon"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/none"
                    android:scaleType="fitStart"
                    android:visibility="gone"
                    android:src="@drawable/ic_ab_back_holo_dark_am" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_margin="0dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/content_description_menubutton"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_juliana" />
                <!-- width 64dp? -->
            </org.holoeverywhere.widget.FrameLayout>

            <org.holoeverywhere.widget.TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/action_bar_height"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </org.holoeverywhere.widget.LinearLayout>

        <FrameLayout
            android:id="@+id/tabsContainer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/default_margin" />

        <org.holoeverywhere.widget.EditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_action_action_search"
            android:hint="@string/search"
            android:imeOptions="actionSearch|flagNoExtractUi|flagForceAscii"
            android:inputType="text"
            android:singleLine="true"
            android:layout_margin="1dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey"
            android:visibility="gone" />

        <org.holoeverywhere.widget.LinearLayout
            android:id="@+id/actionBarContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right" >

            <org.holoeverywhere.widget.ProgressBar
                android:id="@+id/loading"
                android:layout_width="@dimen/action_bar_height"
                android:layout_height="@dimen/action_bar_height"
                android:padding="@dimen/small_margin"
                android:visibility="gone" />

            <org.holoeverywhere.widget.ImageButton
                android:id="@+id/menuShare"
                android:layout_width="@dimen/action_bar_height"
                android:layout_height="@dimen/action_bar_height"
                android:background="@drawable/listselector"
                android:contentDescription="@string/share"
                android:padding="@dimen/small_margin"
                android:scaleType="fitStart"
                android:src="@drawable/ic_action_social_share"
                android:visibility="gone" />

            <org.holoeverywhere.widget.ImageButton
                android:id="@+id/menuSearch"
                android:layout_width="@dimen/action_bar_height"
                android:layout_height="@dimen/action_bar_height"
                android:background="@drawable/listselector"
                android:contentDescription="@string/none"
                android:padding="@dimen/small_margin"
                android:scaleType="fitStart"
                android:src="@drawable/ic_action_action_search"
                android:visibility="gone" />

            <org.holoeverywhere.widget.ImageButton
                android:id="@+id/menuOverflow"
                android:layout_width="@dimen/action_bar_height"
                android:layout_height="@dimen/action_bar_height"
                android:background="@drawable/listselector"
                android:contentDescription="@string/none"
                android:padding="@dimen/small_margin"
                android:scaleType="fitStart"
                android:src="@drawable/ic_action_core_overflow" />
        </org.holoeverywhere.widget.LinearLayout>
    </org.holoeverywhere.widget.LinearLayout>

    <org.holoeverywhere.widget.ViewPager
        android:id="@+id/photoDialogPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentblack"
        android:visibility="gone" />

</org.holoeverywhere.widget.FrameLayout>